# OpenCL_GPU

./: CMakeLists.txt  README.md  init.cpp  init.h
modules/FirstLab/: CMakeLists.txt
modules/FirstLab/src/: main.cpp
modules/FirstLab/src/kernels/: kernel.cl
modules/f/: CMakeLists.txt
modules/f/src/: main.cpp
modules/f/src/kernels/: kernel.cl
modules/s/: CMakeLists.txt
modules/s/src/: main.cpp
modules/s/src/kernels/: kernel.cl
modules/th/: CMakeLists.txt
modules/th/src/: main.cpp
modules/th/src/kernels/: kernel.cl
